@@ -49,6 +49,9 @@
             <setting name="dtLastUpdate" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="bOptionsShowLog" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Little_Registry_Cleaner.Properties.Settings>
     </userSettings>
     <applicationSettings>
