@@ -241,3 +241,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 - Scans needed Wow6432Node subkeys for errors (needs more updating)
 - The logger is more verbose
 - Fixed updater because it wasnt checking the right timespan
+- Added option to disable log being showed after scanning
